# Automaton

./: Automaton.cabal  nowy.in  test.arg
.stack-work/install/x86_64-linux/lts-7.11/8.0.1/flag-cache/: Automaton-0.1.0.0-6bZeNUyyycTD0CxAwaZN0W  Automaton-0.1.0.0-A8Lue7XUpdkBOExGdwpYs1  hashmap-1.3.1.1-EsEoa0qXwh9DIEDzax73tQ
.stack-work/install/x86_64-linux/lts-7.11/8.0.1/lib/x86_64-linux-ghc-8.0.1/Automaton-0.1.0.0-6bZeNUyyycTD0CxAwaZN0W/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-7.11/8.0.1/lib/x86_64-linux-ghc-8.0.1/Automaton-0.1.0.0-9OVEd2BDnQp716WdzEmph/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-7.11/8.0.1/lib/x86_64-linux-ghc-8.0.1/Automaton-0.1.0.0-A8Lue7XUpdkBOExGdwpYs1/: Lib.dyn_hi  Lib.hi  RegexpParser.dyn_hi  RegexpParser.hi
.stack-work/install/x86_64-linux/lts-7.11/8.0.1/pkgdb/: Automaton-0.1.0.0-6bZeNUyyycTD0CxAwaZN0W.conf  Automaton-0.1.0.0-A8Lue7XUpdkBOExGdwpYs1.conf  package.cache
app/: Main.hs
src/: Lib.hs  RegexpParser.hs
